photography.css: fix deprecation warning re: grid-gap

--- a/assets/css/templates/photography.css
+++ b/assets/css/templates/photography.css
@@ -1,7 +1,7 @@
 .albums {
     display: grid;
     list-style: none;
-    grid-gap: 1rem;
+    gap: 1rem;
     line-height: 0;
 }
 
